fix: fixed the alignment of the cards in index.html

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -124,10 +124,9 @@ nav img {
 .card-container {
     display: flex;
     flex-wrap: wrap;
-    flex-direction: row;
 }
 
-.card {
+.card { 
     background-color: #407b93;
     color: #fff;
 }
